# libg15render

./: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.in
src/: Makefile.am  Makefile.in  g15fontconvert.c  text.c
